--- a/nodejs/src/views/homepage.ejs
+++ b/nodejs/src/views/homepage.ejs
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Home</title>
+    <title>Danh sách người dùng</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Home</h1>
+    <div class="container mt-5">
+        <h1 class="mb-4">Danh sách người dùng</h1>
+        <p>
+            <%= data2 %>
+        </p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
